# visual-sort

./: .clang-format  .clang-tidy  .clang-tidy.include  .gitignore  .hgignore  CMakeLists.txt  README.md  clang-tidy-report
.github/workflows/: build.yml  format.yml  lint.yml
cmake/: FindGTest.cmake  Findgcovr.cmake  Sanitizers.cmake
src/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  Constants.h  Globals.cpp  Globals.h  Main.cpp  Makefile  Observable.h  SortHandler.cpp  SortHandler.h  Sorts.cpp  Sorts.h  args.cpp  args.h  constants.h  globals.cpp  globals.h  main.cpp  semaphore.h
src/glut/: window.cpp  window.h
src/rendering/: callbacks.cpp  callbacks.h
src/sort_algorithms/: CMakeLists.txt
src/sort_algorithms/algorithms/sorting/: bitonic_sort.hpp  bogo_sort.hpp  bubble_sort.hpp  bucket_sort.hpp  heap_sort.hpp  merge_sort.hpp  quick_sort.hpp
src/sort_algorithms/algorithms/sorting/impl/: bogo_sort.hpp  bubble_sort.hpp  bucket_sort.hpp  heap_sort.hpp  merge_sort.hpp  quick_sort.hpp  scratch_space.hpp
src/sorting/: sort_handler.cpp  sort_handler.h  sorts.cpp  sorts.h
src/visualizer/: CMakeLists.txt  args.cpp  args.h  constants.h  globals.cpp  main.cpp  sort_visualizer.cpp  sort_visualizer.h
src/visualizer/glut/: window.cpp  window.h
src/visualizer/rendering/: callbacks.cpp  color_strategy.hpp  draw_strategy.hpp  render_items.h  render_items.hpp  tone.cpp  tone.h  tone_strategy.hpp  utils.cpp  utils.h
src/visualizer/sorting/: sort_handler.cpp  sorts.h
src/visualizer/util/: observable.h  semaphore.h
tests/: CMakeLists.txt  sort_tests.cpp
tools/: check-clang-tidy.sh
